--- a/styles/about-us-logo.scss
+++ b/styles/about-us-logo.scss
@@ -1,4 +1,10 @@
+@import "mixins.scss";
+
 .about-us-logo{
+  @include mediaScreenMaxWidth(720px){
+    display: none;
+  }
+
   border-color: #037693;
 
   &__dot{
