--- a/styles/audience-interaction-button.scss
+++ b/styles/audience-interaction-button.scss
@@ -2,17 +2,17 @@
 
 .audience-interaction-button{
   @include mediaScreenMaxWidth(720px){
-    padding: 1rem;
+    padding: 0.5em;
+    font-size: 1em;
   }
 
   white-space: nowrap;
   //height: 3.04rem;
   color: white;
   //font-family: "Lato - Semibold";
-  font-size: 1.32rem;
+  font-size: 1.2em;
   font-weight: 400;
-  padding-top: 0.52rem;
-  padding-bottom: 0.52rem;
+  padding: 0.6em 0.7em;
 
   &:focus{
     border: 2px solid #ffffff;
