--- a/styles/audience-interaction.scss
+++ b/styles/audience-interaction.scss
@@ -8,7 +8,7 @@
 
   &__wrapper{
     @include mediaScreenMaxWidth(720px) {
-      height: 25rem;
+      height: 24rem;
     }
 
     height: 58rem;
@@ -55,7 +55,11 @@
   }
 
   &__titles-container{
+    @include mediaScreenMaxWidth(700px){
+      font-size: 0.8rem;
+    }
     width: 100%;
+    font-size: 1rem;
   }
 
   &__titles-lines-container{
@@ -71,12 +75,12 @@
 
   &__title{
     @include mediaScreenMaxWidth(720px){
-      font-size: 2.3rem;
+      font-size: 2.2em;
     }
 
     //white-space: nowrap;
     color: white;
-    font-size: 3.32rem;
+    font-size: 3.32em;
     margin-bottom: 0;
     text-align: center;
   }
@@ -84,12 +88,12 @@
   &__subtitle{
     @include mediaScreenMaxWidth(720px){
       margin-top: 20px;
-      font-size: 1.4rem;
+      font-size: 1.2rem;
     }
 
     color: white;
     //font-family: Lato;
-    font-size: 1.84rem;
+    font-size: 1.84em;
     margin-top: 50px;
     text-align: center;
   }
@@ -101,9 +105,11 @@
 
   &__buttons{
     @include mediaScreenMaxWidth(720px){
-      margin-top: 50px;
+      font-size: 1.2rem;
+      margin-top: 70px;
     }
 
+    font-size: 1rem;
     margin-top: 13rem;
   }
 }
