--- a/styles/events.scss
+++ b/styles/events.scss
@@ -14,11 +14,23 @@
     padding-top: 64px;
   }
 
+  &__title-container{
+    width: intrinsic;
+    width: -moz-max-content;
+    width: -webkit-max-content;
+    margin: auto;
+  }
+
   &__title{
     @include mediaScreenMaxWidth(700px){
       display: none;
     }
 
+    font-weight: 300;
+    letter-spacing: 4.17px;
+    font-size: 3.32rem;
+    text-align: center;
+    color: #037693;
     margin: auto;
   }
 
