--- a/styles/how-it-works.scss
+++ b/styles/how-it-works.scss
@@ -1,9 +1,18 @@
 @import "mixins.scss";
 
 .how-it-works{
+
+  &__wrapper{
+    @include mediaScreenMaxWidth(720px) {
+      margin: 50px 0;
+    }
+
+    margin: 124.8px auto 147.2px;
+  }
+
   &__item{
     @include mediaScreenMaxWidth(720px){
-      width: 300px;
+      width: 225px;
       margin-bottom: 50px;
     }
 
@@ -28,5 +37,25 @@
     display: flex;
     justify-content: space-between;
     margin: 123px 10% 0;
+  }
+
+  &__title-container{
+    width: intrinsic;
+    width: -moz-max-content;
+    width: -webkit-max-content;
+    margin: auto;
+  }
+
+  &__title{
+    @include mediaScreenMaxWidth(700px){
+      font-size: 2.5rem;
+    }
+
+    font-weight: 300;
+    letter-spacing: 4.17px;
+    font-size: 3.32rem;
+    text-align: center;
+    color: #037693;
+    margin: 0;
   }
 }
