--- a/styles/interaction.scss
+++ b/styles/interaction.scss
@@ -88,6 +88,7 @@
     @include mediaScreenMaxWidth(720px){
       margin: 50px 0 0;
       width: 100%;
+      height: auto;
       height: fit-content;
       display: flex;
       justify-content: space-evenly;
@@ -95,6 +96,65 @@
 
     height: 25rem;
     margin: 100px 100px;
+    width: 40%;
+  }
+
+  &__first-rectangle-container{
+    @include mediaScreenMaxWidth(720px){
+      height: 7rem;
+    }
+  }
+
+  &__second-rectangle-container{
+    @include mediaScreenMaxWidth(720px){
+      position: static;
+      height: 7rem;
+    }
+
+    position: relative;
+    top: -13.75rem;
+    left: 8.75rem;
+  }
+
+  &__third-rectangle-container{
+    @include mediaScreenMaxWidth(720px){
+      position: static;
+      height: 7rem;
+    }
+
+    position: relative;
+    top: -27.25rem;
+  }
+
+  &__logo{
+    -ms-transform: rotate(-90deg);
+    -webkit-transform: rotate(-90deg);
+    transform: rotate(-90deg);
+    height: intrinsic;
+    height: -moz-max-content;
+    height: -webkit-max-content;
+    display: flex;
+    position: relative;
+    padding: .5em;
+    width: 16rem;
+    height: 2rem;
+    top: 6.5rem;
+    left: 1rem;
+    border: 1px solid #ffffff;
+    border-right: none;
+  }
+
+  &__line{
+    @include mediaScreenMaxWidth(720px) {
+      width: 20%;
+      margin: auto;
+    }
+
+    display: inline-block;
+    background-color: #ffffff;
+    height: 1px;
+    min-width: 4rem;
+    vertical-align: middle;
     width: 40%;
   }
 }
