--- a/new/style.scss
+++ b/new/style.scss
@@ -1,1 +1,11 @@
+@import "styles/button.scss";
+@import "styles/buttons-container.scss";
+@import "styles/content.scss";
+@import "styles/description.scss";
+@import "styles/image.scss";
 @import "styles/interaction.scss";
+@import "styles/title.scss";
+
+*{
+  font-family: 'Lato', sans-serif;
+}
