--- a/new/styles/title.scss
+++ b/new/styles/title.scss
@@ -15,7 +15,7 @@
     top: -16px;
     font-size: 0;
     content: url("../img/lines.png");
-    display: flex;
+    display: block;
     align-self: flex-end;
     height: 7px;
   }
