--- a/new/styles/interaction.scss
+++ b/new/styles/interaction.scss
@@ -27,4 +27,10 @@
     padding-right: 20px;
     margin-right: 50px;
   }
+
+  &__content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 }
