--- a/new/style.scss
+++ b/new/style.scss
@@ -3,6 +3,8 @@
 @import "styles/description.scss";
 @import "styles/interaction.scss";
 @import "styles/title.scss";
+@import "styles/about-us.scss";
+@import "styles/logo.scss";
 
 *{
   font-family: 'Lato', sans-serif;
