--- a/new/styles/title.scss
+++ b/new/styles/title.scss
@@ -4,7 +4,6 @@
   text-align: center;
   margin: 0;
   padding: 0;
-  text-shadow: 0 5px 5px black;
   line-height: 70px;
   display: flex;
   flex-direction: column;
@@ -18,5 +17,12 @@
     display: block;
     align-self: flex-end;
     height: 7px;
+  }
+
+  &_header{
+    width: 100%;
+    text-align: center;
+    color: #037693;
+    font-size: 65.5px;
   }
 }
