--- a/new/style.scss
+++ b/new/style.scss
@@ -1,10 +1,13 @@
 @import "styles/button.scss";
 @import "styles/buttons-container.scss";
+@import "styles/subtitle.scss";
 @import "styles/description.scss";
 @import "styles/interaction.scss";
 @import "styles/title.scss";
 @import "styles/about-us.scss";
 @import "styles/logo.scss";
+@import "styles/circle.scss";
+@import "styles/circles-container.scss";
 
 *{
   font-family: 'Lato', sans-serif;
