--- a/new/styles/about-us.scss
+++ b/new/styles/about-us.scss
@@ -14,29 +14,43 @@
     box-sizing: border-box;
   }
 
-  &__title-container{
+  &__title-logo-container{
     display: flex;
   }
 
-  &__header-title{
+  &__title-container{
     width: 60%;
+  }
+
+  &__header-title{
+    width: intrinsic;
+    width: -moz-max-content;
+    width: -webkit-max-content;
     text-align: center;
     letter-spacing: 4.5px;
     font-weight: 100;
-    padding-left: 15px;
-    margin-top: 70px;
+    padding-left: 40px;
+    margin: 115px auto auto;
     align-self: center;
   }
 
   &__title{
+    margin-top: 30px;
+    margin-bottom: 10px;
     text-align: start;
     color: #037693;
   }
 
-  &__description{
-    font-size: 20px;
-    letter-spacing: 0.5px;
+  &__subtitle {
+    margin: 0 0 34px;
+    font-size: 34px;
+    letter-spacing: 1.4px;
+    line-height: 33px;
     color: #037693;
+  }
+
+  &__description{
+    margin: 0 0 28px;
   }
 
   &__content{
@@ -48,5 +62,13 @@
   &__text-container{
     display: flex;
     flex-direction: column;
+    width: 48.5%;
+  }
+
+  &__stats{
+    margin-left: 25px;
+    width: 45%;
+    margin-top: -7px;
+    height: 305px;
   }
 }
