--- a/new/style.css
+++ b/new/style.css
@@ -15,6 +15,10 @@
 .buttons-container {
   display: flex;
   justify-content: center; }
+  .buttons-container__create-button {
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-right: 50px; }
 
 .subtitle {
   color: #ffffff;
@@ -44,10 +48,6 @@
   .interaction__buttons-container {
     margin-left: 13px;
     margin-top: 151px; }
-  .interaction__create-button {
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-right: 50px; }
   .interaction__content {
     display: flex;
     flex-direction: column;
@@ -96,8 +96,6 @@
       background-color: #037693;
       order: 2; }
   .title_header {
-    width: 100%;
-    text-align: center;
     color: #037693;
     font-size: 65.5px; }
 
@@ -157,6 +155,8 @@
   width: 48.5%; }
 
 .about-us__stats {
+  display: flex;
+  justify-content: space-evenly;
   margin-left: 25px;
   width: 45%;
   margin-top: -7px;
@@ -243,10 +243,6 @@
   .circle_orange {
     color: #f0a765;
     background-color: #f0a76500; }
-
-.circles-container {
-  display: flex;
-  justify-content: space-evenly; }
 
 * {
   font-family: 'Lato', sans-serif; }
