--- a/new/styles/about-us.scss
+++ b/new/styles/about-us.scss
@@ -66,6 +66,8 @@
   }
 
   &__stats{
+    display: flex;
+    justify-content: space-evenly;
     margin-left: 25px;
     width: 45%;
     margin-top: -7px;
