--- a/new/styles/buttons-container.scss
+++ b/new/styles/buttons-container.scss
@@ -1,4 +1,10 @@
 .buttons-container{
   display: flex;
   justify-content: center;
+
+  &__create-button{
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-right: 50px;
+  }
 }
