--- a/new/styles/circle.scss
+++ b/new/styles/circle.scss
@@ -1,66 +1,83 @@
-.circle{
-  border-bottom: 2px solid;
-  border-color: inherit;
-  display: flex;
-  flex-direction: column-reverse;
-  justify-content: center;
-  height: 100%;
+.circle {
+    display: flex;
+    flex-direction: column-reverse;
 
-  &__title{
-    color: inherit;
-    margin: 25px auto 0;
-    font-size: 53px;
-    order: 2;
-  }
+    height: 100%;
 
-  &__text{
-    color: #000;
-    margin-top: 15px;
-    white-space: nowrap;
-    text-align: center;
-    font-size: 25px;
-    order: 1;
-  }
+    border-color: inherit;
+    border-bottom: 2px solid;
 
-  &::before{
-    color: inherit;
-    margin: 0 auto;
-    content: "";
-    position: relative;
-    top: 62.5px;
-    width: 75px;
-    height: 75px;
-    border-radius: 50%;
-    background-color: currentColor;
-    opacity: 0.5;
-    order: 4;
-  }
+    justify-content: center;
 
-  &::after{
-    color: inherit;
-    margin: 0 auto;
-    content: "";
-    width: 50px;
-    height: 50px;
-    border: 2px solid #fff;
-    box-sizing: border-box;
-    border-radius: 50%;
-    background-color: currentColor;
-    order: 3;
-  }
+    &__title {
+        margin: 25px auto 0;
 
-  &_green{
-    color: #4ca59a;
-    background-color: #4ca59a00;
-  }
+        color: inherit;
 
-  &_red{
-    color: #f26250;
-    background-color: #f2625000;
-  }
+        font-size: 53px;
 
-  &_orange{
-    color: #f0a765;
-    background-color: #f0a76500;
-  }
+        order: 2;
+    }
+
+    &__text {
+        margin-top: 15px;
+
+        text-align: center;
+        white-space: nowrap;
+
+        color: #000000;
+
+        font-size: 25px;
+
+        order: 1;
+    }
+
+    &::before {
+        position: relative;
+        top: 62.5px;
+
+        width: 75px;
+        height: 75px;
+        margin: 0 auto;
+
+        content: "";
+
+        opacity: 0.5;
+        color: inherit;
+        border-radius: 50%;
+        background-color: currentColor;
+
+        order: 4;
+    }
+
+    &::after {
+        box-sizing: border-box;
+        width: 50px;
+        height: 50px;
+        margin: 0 auto;
+
+        content: "";
+
+        color: inherit;
+        border: 2px solid #ffffff;
+        border-radius: 50%;
+        background-color: currentColor;
+
+        order: 3;
+    }
+
+    &_green {
+        color: #4ca59a;
+        background-color: #4ca59a00;
+    }
+
+    &_red {
+        color: #f26250;
+        background-color: #f2625000;
+    }
+
+    &_orange {
+        color: #f0a765;
+        background-color: #f0a76500;
+    }
 }
