--- a/new/style.css
+++ b/new/style.css
@@ -1,24 +1,24 @@
 .button {
-  background-color: transparent;
+  padding: 7px 13px;
   white-space: nowrap;
   color: white;
   border: 2px solid #ffffff;
+  background-color: transparent;
   font-size: 25px;
   font-weight: 400;
-  line-height: 40px;
-  padding: 7px 13px; }
+  line-height: 40px; }
   .button:focus {
+    color: #037693;
     outline: none;
-    background-color: #ffffff;
-    color: #037693; }
+    background-color: #ffffff; }
 
 .buttons-container {
   display: flex;
   justify-content: center; }
   .buttons-container__create-button {
-    padding-left: 20px;
+    margin-right: 50px;
     padding-right: 20px;
-    margin-right: 50px; }
+    padding-left: 20px; }
 
 .subtitle {
   color: #ffffff;
@@ -26,74 +26,74 @@
   font-weight: 200; }
 
 .description {
-  line-height: 25px;
-  font-size: 20px; }
+  font-size: 20px;
+  line-height: 25px; }
 
 .interaction {
-  background-image: url("../img/interaction-background.png");
   display: flex;
   padding-top: 280px;
-  padding-left: 215px;
   padding-right: 220px;
-  justify-content: space-between;
-  align-items: flex-start; }
+  padding-left: 215px;
+  background-image: url("../img/interaction-background.png");
+  align-items: flex-start;
+  justify-content: space-between; }
   .interaction__title {
     text-shadow: 0 5px 5px black; }
   .interaction__image {
-    height: 690px;
-    width: 420px; }
+    width: 420px;
+    height: 690px; }
   .interaction__subtitle {
     margin-top: 43px;
     margin-left: 85px; }
   .interaction__buttons-container {
-    margin-left: 13px;
-    margin-top: 151px; }
+    margin-top: 151px;
+    margin-left: 13px; }
   .interaction__content {
     display: flex;
     flex-direction: column;
     justify-content: center; }
 
 .title {
-  color: #ffffff;
-  font-size: 65.5px;
-  text-align: center;
-  margin: 0;
-  padding: 0;
-  line-height: 70px;
   display: flex;
   flex-direction: column;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  color: #ffffff;
+  font-size: 65.5px;
+  line-height: 70px;
   justify-content: flex-end; }
   .title_big-lines::after {
     position: relative;
     top: -16px;
-    font-size: 0;
-    content: url("../img/lines.png");
     display: block;
-    align-self: flex-end;
-    height: 7px; }
+    height: 7px;
+    content: url("../img/lines.png");
+    font-size: 0;
+    align-self: flex-end; }
   .title_small-lines {
     display: flex;
     flex-wrap: wrap;
     justify-content: center; }
     .title_small-lines::after {
-      margin-top: 10px;
-      align-self: flex-end;
-      content: "";
       width: 80px;
       height: 5px;
+      margin-top: 10px;
+      content: "";
       border-radius: 2px;
       background-color: #037693;
+      align-self: flex-end;
       order: 1; }
     .title_small-lines::before {
-      align-self: flex-end;
-      content: "";
       position: relative;
       top: -5px;
       left: -95px;
       width: 10px;
       height: 5px;
+      content: "";
       border-radius: 2px;
       background-color: #037693;
+      align-self: flex-end;
       order: 2; }
   .title_header {
     color: #037693;
@@ -103,13 +103,13 @@
   width: 20%; }
 
 .about-us__logo {
-  margin-left: 25px;
-  margin-top: 132px;
+  box-sizing: border-box;
   width: 330px;
-  height: 65px;
   min-width: auto;
   min-width: fit-content;
-  box-sizing: border-box; }
+  height: 65px;
+  margin-top: 132px;
+  margin-left: 25px; }
 
 .about-us__title-logo-container {
   display: flex; }
@@ -121,11 +121,11 @@
   width: intrinsic;
   width: -moz-max-content;
   width: -webkit-max-content;
+  margin: 115px auto auto;
+  padding-left: 40px;
   text-align: center;
   letter-spacing: 4.5px;
   font-weight: 100;
-  padding-left: 40px;
-  margin: 115px auto auto;
   align-self: center; }
 
 .about-us__title {
@@ -136,18 +136,18 @@
 
 .about-us__subtitle {
   margin: 0 0 34px;
-  font-size: 34px;
   letter-spacing: 1.4px;
-  line-height: 33px;
-  color: #037693; }
+  color: #037693;
+  font-size: 34px;
+  line-height: 33px; }
 
 .about-us__description {
   margin: 0 0 28px; }
 
 .about-us__content {
-  padding-left: 310px;
+  display: flex;
   padding-right: 100px;
-  display: flex; }
+  padding-left: 310px; }
 
 .about-us__text-container {
   display: flex;
@@ -156,81 +156,81 @@
 
 .about-us__stats {
   display: flex;
-  justify-content: space-evenly;
-  margin-left: 25px;
   width: 45%;
+  height: 305px;
   margin-top: -7px;
-  height: 305px; }
+  margin-left: 25px;
+  justify-content: space-evenly; }
 
 .logo {
-  -ms-transform: rotate(-90deg);
-  -webkit-transform: rotate(-90deg);
-  transform: rotate(-90deg);
-  font-size: 35px;
   display: flex;
-  flex-wrap: wrap;
   flex-direction: row-reverse;
-  border: 1px solid #037693;
-  border-right: none;
-  align-items: center;
-  letter-spacing: 3.5px;
   padding-right: 20px;
   padding-left: 20px;
+  -webkit-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+  transform: rotate(-90deg);
+  letter-spacing: 3.5px;
   color: #037693;
-  font-weight: 100; }
+  border: 1px solid #037693;
+  border-right: none;
+  font-size: 35px;
+  font-weight: 100;
+  align-items: center;
+  flex-wrap: wrap; }
   .logo::before {
-    content: "";
     height: 2px;
-    background-color: #037693;
-    order: 1;
-    flex-grow: 1; }
-  .logo::after {
     content: "";
-    height: 18px;
+    background-color: #037693;
+    flex-grow: 1;
+    order: 1; }
+  .logo::after {
     width: 18px;
+    height: 18px;
+    content: "";
     border-radius: 50%;
     background-color: #037693;
     order: 2; }
 
 .circle {
-  border-bottom: 2px solid;
-  border-color: inherit;
   display: flex;
   flex-direction: column-reverse;
-  justify-content: center;
-  height: 100%; }
+  height: 100%;
+  border-color: inherit;
+  border-bottom: 2px solid;
+  justify-content: center; }
   .circle__title {
-    color: inherit;
     margin: 25px auto 0;
+    color: inherit;
     font-size: 53px;
     order: 2; }
   .circle__text {
-    color: #000;
     margin-top: 15px;
-    white-space: nowrap;
     text-align: center;
+    white-space: nowrap;
+    color: #000000;
     font-size: 25px;
     order: 1; }
   .circle::before {
-    color: inherit;
-    margin: 0 auto;
-    content: "";
     position: relative;
     top: 62.5px;
     width: 75px;
     height: 75px;
-    border-radius: 50%;
-    background-color: currentColor;
-    opacity: 0.5;
-    order: 4; }
-  .circle::after {
-    color: inherit;
     margin: 0 auto;
     content: "";
+    opacity: 0.5;
+    color: inherit;
+    border-radius: 50%;
+    background-color: currentColor;
+    order: 4; }
+  .circle::after {
+    box-sizing: border-box;
     width: 50px;
     height: 50px;
-    border: 2px solid #fff;
-    box-sizing: border-box;
+    margin: 0 auto;
+    content: "";
+    color: inherit;
+    border: 2px solid #ffffff;
     border-radius: 50%;
     background-color: currentColor;
     order: 3; }
