--- a/new/styles/about-us.scss
+++ b/new/styles/about-us.scss
@@ -1,3 +1,5 @@
+@import "variables.scss";
+
 .about-us {
     &__logo-container {
         width: 20%;
@@ -37,12 +39,11 @@
     }
 
     &__title {
-        margin-top: 30px;
-        margin-bottom: 10px;
+        margin: 30px 0 10px;
 
         text-align: start;
 
-        color: #037693;
+        color: $primary-color;
     }
 
     &__subtitle {
@@ -50,7 +51,7 @@
 
         letter-spacing: 1.4px;
 
-        color: #037693;
+        color: $primary-color;
 
         font-size: 34px;
         line-height: 33px;
