--- a/new/styles/button.scss
+++ b/new/styles/button.scss
@@ -1,10 +1,12 @@
+@import "variables.scss";
+
 .button {
     padding: 7px 13px;
 
     white-space: nowrap;
 
-    color: white;
-    border: 2px solid #ffffff;
+    color: $bright-main-color;
+    border: 2px solid $bright-main-color;
     background-color: transparent;
 
     font-size: 25px;
@@ -12,8 +14,8 @@
     line-height: 40px;
 
     &:focus {
-        color: #037693;
+        color: $primary-color;
         outline: none;
-        background-color: #ffffff;
+        background-color: $bright-main-color;
     }
 }
