--- a/new/styles/interaction.scss
+++ b/new/styles/interaction.scss
@@ -1,3 +1,5 @@
+@import "variables.scss";
+
 .interaction {
     display: flex;
 
@@ -11,7 +13,8 @@
     justify-content: space-between;
 
     &__title {
-        text-shadow: 0 5px 5px black;
+        margin: 0;
+        text-shadow: 0 5px 5px $dark-secondary-color;
     }
 
     &__image {
