--- a/new/styles/logo.scss
+++ b/new/styles/logo.scss
@@ -1,3 +1,5 @@
+@import "variables.scss";
+
 .logo {
     display: flex;
     flex-direction: row-reverse;
@@ -10,8 +12,8 @@
             transform: rotate(-90deg);
     letter-spacing: 3.5px;
 
-    color: #037693;
-    border: 1px solid #037693;
+    color: $primary-color;
+    border: 1px solid $primary-color;
     border-right: none;
 
     font-size: 35px;
@@ -25,7 +27,7 @@
 
         content: "";
 
-        background-color: #037693;
+        background-color: $primary-color;
 
         flex-grow: 1;
         order: 1;
@@ -38,7 +40,7 @@
         content: "";
 
         border-radius: 50%;
-        background-color: #037693;
+        background-color: $primary-color;
 
         order: 2;
     }
