--- a/new/styles/subtitle.scss
+++ b/new/styles/subtitle.scss
@@ -1,5 +1,7 @@
+@import "variables.scss";
+
 .subtitle {
-    color: #ffffff;
+    color: $bright-main-color;
 
     font-size: 38.5px;
     font-weight: 200;
