--- a/new/style.scss
+++ b/new/style.scss
@@ -11,11 +11,12 @@
 @import "styles/nav-list.scss";
 @import "styles/log-reg.scss";
 
-a{
-  text-decoration: none;
-  color: $bright-main-color;
+a {
+    text-decoration: none;
+
+    color: $bright-main-color;
 }
 
-*{
-  font-family: 'Lato', sans-serif;
+* {
+    font-family: "Lato", sans-serif;
 }
