--- a/new/styles/nav-list.scss
+++ b/new/styles/nav-list.scss
@@ -1,36 +1,46 @@
 @import "variables.scss";
 
-.nav-list{
-  padding: 0;
+.nav-list {
+    padding: 0;
 
-  &__element{
-    display: inline-flex;
-    color: $bright-main-color;
-    font-size: 30px;
-    text-align: center;
-    justify-content: center;
-    padding-bottom: 8px;
-    border-top: 2px solid $dark-secondary-color;
-    height: 100%;
-    box-sizing: border-box;
-    min-width: 150px;
-    max-width: 190px;
-  }
+    &__element {
+        display: inline-flex;
 
-  &__href{
-    white-space: nowrap;
-    height: 100%;
-    display: flex;
-    align-self: center;
-    text-align: center;
-    margin: auto 15px;
-    align-items: center;
-  }
+        box-sizing: border-box;
+        min-width: 150px;
+        max-width: 190px;
+        height: 100%;
+        padding-bottom: 8px;
 
-  &__element:hover, &__element:focus{
-    height: 100%;
-    background-color: $bright-transparent-color;
-    border-top: 2px solid $bright-main-color;
-    box-sizing: border-box;
-  }
+        text-align: center;
+
+        color: $bright-main-color;
+        border-top: 2px solid $dark-secondary-color;
+
+        font-size: 30px;
+
+        justify-content: center;
+    }
+
+    &__href {
+        display: flex;
+
+        height: 100%;
+        margin: auto 15px;
+
+        text-align: center;
+        white-space: nowrap;
+
+        align-items: center;
+        align-self: center;
+    }
+
+    &__element:hover,
+    &__element:focus {
+        box-sizing: border-box;
+        height: 100%;
+
+        border-top: 2px solid $bright-main-color;
+        background-color: $bright-transparent-color;
+    }
 }
