--- a/new/styles/log-reg.scss
+++ b/new/styles/log-reg.scss
@@ -19,7 +19,7 @@
         display: flex;
 
         height: 27px;
-        margin: auto;
+        margin: auto auto 5px;
 
         justify-self: center;
     }
