--- a/new/styles/nav-list.scss
+++ b/new/styles/nav-list.scss
@@ -1,14 +1,12 @@
 @import "variables.scss";
 
 .nav-list {
-    padding: 0;
-
     &__element {
         display: inline-flex;
 
         box-sizing: border-box;
-        min-width: 150px;
-        max-width: 190px;
+        min-width: 16%;
+        max-width: 20%;
         height: 100%;
         padding-bottom: 8px;
 
