--- a/new/style.css
+++ b/new/style.css
@@ -255,6 +255,7 @@
     padding: 0;
     justify-content: space-between; }
   .nav__list-container {
+    max-width: 55%;
     margin: 0;
     flex-grow: 1; }
   .nav__log-reg {
