--- a/new/styles/circle.scss
+++ b/new/styles/circle.scss
@@ -68,15 +68,15 @@
         order: 3;
     }
 
-    &_green {
+    &_audience {
         color: $audience-color;
     }
 
-    &_red {
+    &_hours {
         color: $hours-color;
     }
 
-    &_orange {
+    &_event {
         color: $event-color;
     }
 }
